@@ -711,12 +711,12 @@
 ##########################################################################################################
 #
 ## Supermicro CPU Temperature Sensor
-## (X7DBR-3/X8DTH/X8DTG/X8DTU/X8DT3-LN4F/X8DTU-6+/X8DTL-3F/X8SIL-F/X9SCL/X9SCM/X8DTN+-F)
+## (X7DBR-3/X8DTH/X8DTG/X8DTU/X8DT3-LN4F/X8DTU-6+/X8DTL-3F/X8SIL-F/X9SCL/X9SCM/X8DTN+-F/X8SIE)
 ##
 ## Manufacturer ID = 10437 (Peppercon, IPMI card manufacturer), 47488 (Supermicro, not IANA number, special case)
 ##                   5593 (Magnum Technologies, rebranded Supermicro board)
 ## Product ID = 4 (X7DBR-3, X7DB8, X8DTN, X7SBI-LN4), 43707 (X8DTH, X8DTG, X8DTU, X8DT3-LN4F), 1549 (X8DTU-6+),
-##              6 (X8DTL, X8DTL-3F), 1541 (X8SIL-F), 1572 (X9SCL, X9SCM), 1551 (X8DTN+-F)
+##              6 (X8DTL, X8DTL-3F), 1541 (X8SIL-F), 1572 (X9SCL, X9SCM), 1551 (X8DTN+-F), 1037 (X8SIE)
 ## Event/Reading Type Code = 70h (OEM)
 ## Sensor Type = C0h (OEM)
 ## Value 0x0000 = "Low"
@@ -727,11 +727,11 @@
 ##
 ## Note: Early Supermicro motherboards used the "Peppercon" Manufacturer ID
 #
-# IPMI_OEM_Value 10437:4,47488:43707+1549+6+1541+1572+1551,5593:6 0x70 0xC0 0x0000 Nominal
-# IPMI_OEM_Value 10437:4,47488:43707+1549+6+1541+1572+1551,5593:6 0x70 0xC0 0x0001 Warning
-# IPMI_OEM_Value 10437:4,47488:43707+1549+6+1541+1572+1551,5593:6 0x70 0xC0 0x0002 Warning
-# IPMI_OEM_Value 10437:4,47488:43707+1549+6+1541+1572+1551,5593:6 0x70 0xC0 0x0004 Critical
-# IPMI_OEM_Value 10437:4,47488:43707+1549+6+1541+1572+1551,5593:6 0x70 0xC0 0x0007 Warning
+# IPMI_OEM_Value 10437:4,47488:43707+1549+6+1541+1572+1551+1037,5593:6 0x70 0xC0 0x0000 Nominal
+# IPMI_OEM_Value 10437:4,47488:43707+1549+6+1541+1572+1551+1037,5593:6 0x70 0xC0 0x0001 Warning
+# IPMI_OEM_Value 10437:4,47488:43707+1549+6+1541+1572+1551+1037,5593:6 0x70 0xC0 0x0002 Warning
+# IPMI_OEM_Value 10437:4,47488:43707+1549+6+1541+1572+1551+1037,5593:6 0x70 0xC0 0x0004 Critical
+# IPMI_OEM_Value 10437:4,47488:43707+1549+6+1541+1572+1551+1037,5593:6 0x70 0xC0 0x0007 Warning
 #
 ##########################################################################################################
 #
