@@ -121,6 +121,7 @@ extern "C" {
  * Supermicro X9SCL
  * Supermicro X9SCM
  * Supermicro X8DTN+-F (X8DTNPLUS_F)
+ * Supermicro X8SIE
  */
 /* achu: not official names, named based on use context */
 #define IPMI_SENSOR_TYPE_OEM_SUPERMICRO_CPU_TEMP 0xC0 
